--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,7 @@
+@charset "UTF-8";
 html {
   padding: 0;
   margin: 0;
-  font-size: 16px;
-}
-
-body {
-  font-family: 'Noto Serif TC', serif;
-  color: #633cba;
 }
 
 .content {
@@ -27,18 +22,21 @@ body {
   display: flex;
 }
 
-.content .choice a {
+.content .choice .choice_btn {
   display: block;
   position: relative;
-  width: 33.33%;
-  margin-bottom: -0.5%;
+  width: 33.4%;
 }
 
-.content .choice a .finger {
+.content .choice .choice_btn .finger {
   width: 38%;
   position: absolute;
   top: 25%;
   right: 2%;
+}
+
+.content .choice .choice_center {
+  width: 33.2%;
 }
 
 .content .FV {
@@ -54,8 +52,9 @@ body {
 
 .content .FV .FV_down01 {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  width: 110%;
+  bottom: -3%;
+  right: -5%;
   -webkit-animation: rotation 10s linear infinite;
           animation: rotation 10s linear infinite;
   z-index: 1;
@@ -94,6 +93,8 @@ body {
 }
 
 .content .hukidasi p {
+  font-family: 'Noto Serif TC', serif;
+  color: #633cba;
   font-size: 3.5rem;
   line-height: 4.5rem;
   text-align: right;
@@ -114,8 +115,8 @@ body {
 .content .hukidasi mark.animate {
   -webkit-animation: 3s fontline ease-in-out forwards;
           animation: 3s fontline ease-in-out forwards;
-  -webkit-animation-delay: 4s;
-          animation-delay: 4s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
 }
 
 .content .down_place {
@@ -141,6 +142,47 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.content .offer_btn .btn_last {
+  width: 76%;
+  position: absolute;
+  top: 38%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.content .offer_btn .light {
+  position: absolute;
+  top: 46%;
+  left: 50.5%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  /* ↓閃光在一範圍內跑的寬與高↓ */
+  width: 85%;
+  height: 86%;
+  margin: 0 auto;
+  border-radius: 0 0 20px 20px;
+  /* ↑閃光在一範圍內跑的寬與高↑ */
+  overflow: hidden;
+}
+
+.content .offer_btn .light::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 84%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: url(../img/light.png) no-repeat center;
+  background-size: 100%;
+  -webkit-animation: btn 3.5s infinite ease-in-out;
+          animation: btn 3.5s infinite ease-in-out;
+  /* ↓調整閃光透明度↓ */
+  opacity: 0.8;
+  /* ↑調整閃光透明度↑ */
 }
 
 @-webkit-keyframes rotation {
@@ -191,6 +233,24 @@ body {
   100% {
     -webkit-transform: translate(0, 0);
     transform: translate(0, 0);
+  }
+}
+
+@-webkit-keyframes btn {
+  0% {
+    left: -300%;
+  }
+  100% {
+    left: 100%;
+  }
+}
+
+@keyframes btn {
+  0% {
+    left: -300%;
+  }
+  100% {
+    left: 100%;
   }
 }
 
